--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.game_of_life</groupId>
     <artifactId>Game-Of-Life</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>war</packaging> <!-- Change packaging to "war" -->
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.formdev/flatlaf -->
@@ -22,14 +22,19 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-         <build>
+
+    <build>
         <plugins>
-         <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.4.1-SNAPSHOT</version>
- </plugin>
-    </plugins>
-</build>
+            <!-- Add the Maven WAR plugin configuration -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <!-- Configuration for the WAR plugin, if needed -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
