--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.game_of_life</groupId>
     <artifactId>Game-Of-Life</artifactId>
     <version>1.0-SNAPSHOT</version>
+     <packaging>war</packaging>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.formdev/flatlaf -->
@@ -21,4 +22,14 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+         <build>
+<plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.4.1-SNAPSHOT</version>
+ </plugin>
+    </plugins>
+</build>
+
 </project>
