--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,14 @@
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf</artifactId>
             <version>1.3</version>
-        </dependency>
-    </dependencies>
+
+             <dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>3.4.1-SNAPSHOT</version>
+  <type>maven-plugin</type>
+</dependency>
+   
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
