--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,12 @@
     <artifactId>Game-Of-Life</artifactId>
     <version>1.0-SNAPSHOT</version>
      <packaging>war</packaging>
-
-    <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.formdev/flatlaf -->
-        <dependency>
-            <groupId>com.formdev</groupId>
-            <artifactId>flatlaf</artifactId>
-            <version>1.3</version>
-
-             <dependency>
+    <dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>3.4.1-SNAPSHOT</version>
+  <type>maven-plugin</type>
+</dependency>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-war-plugin</artifactId>
   <version>3.4.1-SNAPSHOT</version>
