--- a/pom.xml
+++ b/pom.xml
@@ -7,32 +7,18 @@
     <groupId>org.game_of_life</groupId>
     <artifactId>Game-Of-Life</artifactId>
     <version>1.0-SNAPSHOT</version>
-     <packaging>war</packaging>
-    <dependency>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-war-plugin</artifactId>
-  <version>3.4.1-SNAPSHOT</version>
-  <type>maven-plugin</type>
-</dependency>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-war-plugin</artifactId>
-  <version>3.4.1-SNAPSHOT</version>
-  <type>maven-plugin</type>
-</dependency>
-   
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.formdev/flatlaf -->
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>1.3</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-         <build>
-<plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.4.1-SNAPSHOT</version>
- </plugin>
-    </plugins>
-</build>
-
 </project>
