--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>Game-Of-Life</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- Add packaging type as 'war' -->
+    <packaging>war</packaging>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.formdev/flatlaf -->
         <dependency>
@@ -21,4 +24,18 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+
+    <!-- Add the maven-war-plugin configuration -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version> <!-- Use the latest version -->
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml> <!-- If you don't have a web.xml file -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
