--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.2</version> <!-- Use the latest version -->
+                <version>3.4.0</version> <!-- Use the latest version -->
                 <configuration>
-                  <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
-                    <failOnMissingWebXml>false</failOnMissingWebXml> <!-- If you don't have a web.xml file -->
+                    <failOnMissingWebXml>false</failOnMissingWebXml> 
                 </configuration>
             </plugin>
         </plugins>
